correction passage propreté de code